--- a/client/pages/index/index.wxss
+++ b/client/pages/index/index.wxss
@@ -1,132 +1,124 @@
-.root {
-    background: #efeff4;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom:0;
-}
-.line {
-    padding-top: 30rpx;
-}
-.line text {
-    color: #6D6D72;
-    font-size: 28rpx;
-    margin-left: 40rpx;
-}
-.line-control {
-    border-bottom: #d9d9d9 1px solid;
-    border-top: #d9d9d9 1px solid;
-    background-color: #fff;
-    margin-top: 10rpx;
-}
-.line-control .item {
-    box-sizing: border-box;
-    text-align: left;
-    color: #007AFF;
-    font-size: 32rpx;
-    padding-left: 40rpx;
-    position: relative;
-}
-.line-control .item:active {
-    background: #d9d9d9;
-}
-.line-control .item.flag {
-    color: #333;
-}
-.line-control .item.flag:active {
-    background: #fff;
-}
-.line-control .item-inner {
-    border-bottom: #d9d9d9 1px solid;
-    height: 90rpx;
-    line-height: 90rpx;
-}
-.line-control .item-image {
-    text-align: center;
-}
-.line-control .item.button {
-    padding: 10px 20px;
-}
-.line-control .item.button:active {
-    background-color: #fff;
-}
-.line-control .item-image .image {
-    width: 380rpx;
-    height: 380rpx;
-    text-align: center;
-    margin: 10rpx;
-}
-.line-control .item:last-child .item-inner {
-     border:none;
-}
-.line-control .switch {
-    vertical-align: middle;
-    line-height: normal;
-}
-.line-control text {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 10rpx;
-    color: #8E8E93;
-    margin-left: 0;
-}
-.line-control .switch-status {
-    color: #999;
-    position: absolute;
-    right: 40rpx;
-    top: 0;
-}
-.line-control .item.disabled {
-    color: #999
-}
-.line-control .item.disabled:active {
-    background: none;
-}
-.line .demo {
-    height: 90rpx;
-    line-height: 90rpx;
-    box-sizing: border-box;
-    text-align: left;
-    color: #333;
-    background-color: #fff;
-    position: relative;
-    font-size: 32rpx;
-    padding-left: 40rpx;
-}
-.line .demo .link {
-    position: absolute;
-    right: 40rpx;
-    top: 0rpx;
-    color: #8E8E93;
-}
-.hide {
-    display: none
+/**index.wxss**/
+page {
+    background: #F6F6F6;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
-@media (max-width : 360px) {
-    .line text {
-        font-size: 36rpx;
-    }
-    .line-control .item-inner {
-        border-bottom: #d9d9d9 1px solid;
-        height: 110rpx;
-        line-height: 110rpx;
-    }
-    .line-control .item {
-        height: 110rpx;
-        line-height: 110rpx;
-        box-sizing: border-box;
-        text-align: left;
-        color: #007AFF;
-        font-size: 38rpx;
-        padding-left: 40rpx;
-        position: relative
-    }
-    .line .demo {
-        height: 110rpx;
-        line-height: 110rpx;
-        font-size: 38rpx;
-        padding-left: 40rpx;
-    }
+.userinfo, .uploader, .tunnel {
+    margin-top: 40rpx;
+    height: 140rpx;
+    width: 100%;
+    background: #FFF;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-left: none;
+    border-right: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    transition: all 300ms ease;
+}
+
+.userinfo-avatar {
+    width: 100rpx;
+    height: 100rpx;
+    margin: 20rpx;
+    border-radius: 50%;
+}
+
+.userinfo-nickname {
+    font-size: 32rpx;
+    color: #007AFF;
+}
+
+.uploader, .tunnel {
+    height: auto;
+    padding: 0 0 0 40rpx;
+    flex-direction: column;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+
+.uploader-text, .tunnel-text {
+    width: 100%;
+    line-height: 52px;
+    font-size: 34rpx;
+    color: #007AFF;
+}
+
+.uploader-container {
+    width: 100%;
+    height: 400rpx;
+    padding: 20rpx 20rpx 20rpx 0;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    box-sizing: border-box;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+}
+
+.uploader-image {
+    width: 100%;
+    height: 360rpx;
+}
+
+.tunnel {
+    padding: 0 0 0 40rpx;
+}
+
+.tunnel-text {
+    position: relative;
+    color: #222;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+}
+
+.tunnel-text:first-child {
+    border-top: none;
+}
+
+.tunnel-switch {
+    position: absolute;
+    right: 20rpx;
+    top: -2rpx;
+}
+
+.disable {
+    color: #888;
+}
+
+.service {
+    position: fixed;
+    right: 40rpx;
+    bottom: 40rpx;
+    width: 140rpx;
+    height: 140rpx;
+    border-radius: 50%;
+    background: linear-gradient(#007AFF, #0063ce);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    transition: all 300ms ease;
+}
+
+.service-button {
+    position: absolute;
+    top: 40rpx;
+}
+
+.service:active {
+    box-shadow: none;
+}
+
+.request-text {
+    padding: 20rpx 0;
+    font-size: 24rpx;
+    line-height: 36rpx;
+    word-break: break-all;
 }
