--- a/client/pages/index/index.wxss
+++ b/client/pages/index/index.wxss
@@ -6,7 +6,7 @@ page {
     justify-content: flex-start;
 }
 
-.userinfo, .uploader, .tunnel {
+.userinfo, .message {
     margin-top: 40rpx;
     height: 140rpx;
     width: 100%;
@@ -32,44 +32,20 @@ page {
     color: #007AFF;
 }
 
-.uploader, .tunnel {
-    height: auto;
+.message {
     padding: 0 0 0 40rpx;
+    height: auto;
     flex-direction: column;
     align-items: flex-start;
     box-sizing: border-box;
 }
 
-.uploader-text, .tunnel-text {
+.message-text {
     width: 100%;
     line-height: 52px;
     font-size: 34rpx;
     color: #007AFF;
-}
-
-.uploader-container {
-    width: 100%;
-    height: 400rpx;
-    padding: 20rpx 20rpx 20rpx 0;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(0, 0, 0, .1);
-}
-
-.uploader-image {
-    width: 100%;
-    height: 360rpx;
-}
-
-.tunnel {
-    padding: 0 0 0 40rpx;
-}
-
-.tunnel-text {
     position: relative;
-    color: #222;
     display: flex;
     flex-direction: row;
     align-content: center;
@@ -78,42 +54,8 @@ page {
     border-top: 1px solid rgba(0, 0, 0, .1);
 }
 
-.tunnel-text:first-child {
+.message-text:first-child {
     border-top: none;
-}
-
-.tunnel-switch {
-    position: absolute;
-    right: 20rpx;
-    top: -2rpx;
-}
-
-.disable {
-    color: #888;
-}
-
-.service {
-    position: fixed;
-    right: 40rpx;
-    bottom: 40rpx;
-    width: 140rpx;
-    height: 140rpx;
-    border-radius: 50%;
-    background: linear-gradient(#007AFF, #0063ce);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    transition: all 300ms ease;
-}
-
-.service-button {
-    position: absolute;
-    top: 40rpx;
-}
-
-.service:active {
-    box-shadow: none;
 }
 
 .request-text {
