--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -15,7 +15,7 @@
 
     <view class="message">
         <view class="message-text">
-            <text bindtap="doRequestWithSession">请求</text>
+            <text bindtap="doCheckIn">请求</text>
         </view>
         <view class="message-text" wx:if="{{requestResult}}">
             <text class="request-text">{{'请求结果：' + requestResult}}</text>
