--- a/wxapp/pages/index/index.wxss
+++ b/wxapp/pages/index/index.wxss
@@ -6,7 +6,7 @@ page {
     justify-content: flex-start;
 }
 
-.userinfo, .message {
+.userinfo{
     margin-top: 40rpx;
     height: 140rpx;
     width: 100%;
@@ -30,37 +30,4 @@ page {
 .userinfo-nickname {
     font-size: 32rpx;
     color: #007AFF;
-}
-
-.message {
-    padding: 0 0 0 40rpx;
-    height: auto;
-    flex-direction: column;
-    align-items: flex-start;
-    box-sizing: border-box;
-}
-
-.message-text {
-    width: 100%;
-    line-height: 52px;
-    font-size: 34rpx;
-    color: #007AFF;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    border-top: 1px solid rgba(0, 0, 0, .1);
-}
-
-.message-text:first-child {
-    border-top: none;
-}
-
-.request-text {
-    padding: 20rpx 0;
-    font-size: 24rpx;
-    line-height: 36rpx;
-    word-break: break-all;
 }
