--- a/wxapp/pages/index/index.wxml
+++ b/wxapp/pages/index/index.wxml
@@ -1,21 +1,10 @@
-<!--index.wxml-->
 <view class="container">
-    <!-- 用户登录 -->
-    <view class="userinfo" bindtap="login">
-        <image
-            class="userinfo-avatar"
-            src="{{logged ? userInfo.avatarUrl : './user-unlogin.png'}}"
-            background-size="cover"
-        ></image>
-        <view>
-            <text class="userinfo-nickname">{{logged ? userInfo.nickName : '登录'}}</text>
-            <text class="userinfo-nickname" wx:if="{{logged}}">{{userInfo.lastLoginTime}}</text>
-        </view>
+  <view style="height:20rpx;background: #eee;width:100%;"></view>
+  <view class="function" style='background:none;display:flex;flex-direction:column;height:auto;'>
+    <view style='display:flex;padding-bottom:20rpx;'>
+      <button type='primary' style='width:100%;margin:20rpx;' bindtap="doCheckIn">签到</button>
+      <button type='warn' style='width:100%;margin:20rpx;' bindtap="doCheckOut">签退</button>
     </view>
-
-    <button class="weui-btn" type="default" plain="true" bindtap="getTaskInfo">任务状态</button>
-
-    <button class="weui-btn" type="default" plain="true" bindtap="doCheckIn">CheckIn</button>
-
-    <button class="weui-btn" type="default" plain="true" bindtap="doCheckOut">CheckOut</button>
+  </view>
+  <view style="height:20rpx;background: #eee;width:100%;"></view>
 </view>
