--- a/wxapp/pages/task/task.wxml
+++ b/wxapp/pages/task/task.wxml
@@ -1,4 +1,16 @@
-<!--index.wxml-->
 <view class="container">
-    <button class="weui-btn" type="default" plain="true" bindtap="getTaskInfo">任务状态</button>
+    <view class="form-box">
+        <view class="row-wrap">
+            <view class="label">功能</view>
+            <view class="label-right">{{taskInfo.name}}</view>
+        </view>
+        <view class="row-wrap">
+            <view class="label">状态</view>
+            <view class="label-right">{{taskInfo.state}}</view>
+        </view>
+        <view class="row-wrap">
+            <view class="label">消息</view>
+            <view class="label-right">{{taskInfo.msg}}</view>
+        </view>
+    </view>
 </view>
