--- a/wxapp/pages/task/task.wxss
+++ b/wxapp/pages/task/task.wxss
@@ -1,7 +1,45 @@
-/**index.wxss**/
-page {
-    background: #F6F6F6;
+page{
+    height: 100%;
+}
+.container{
+    background-color: #f5f5f9;
+    justify-content: initial;
+}
+
+.row-wrap{
+    width: 720rpx;
+    height: 88rpx;
+    line-height: 88rpx;
+    margin-left: 30rpx;
+    border-bottom: 1rpx solid #eee;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    font-size: 28rpx;
+    /*justify-content: space-between;*/
+}
+.row-wrap .label{
+    width: 160rpx;
+    color: #000
+}
+.row-wrap .label-right{
+    flex: 1;
+    height: 88rpx;
+    line-height: 88rpx;
+}
+.row-wrap .label-right input{
+    height: 100%;
+    font-size: 28rpx;
+    padding-right: 30rpx;
+}
+.addr-details{
+    height: auto;
+    padding: 30rpx 0;
+    margin-left:30rpx;
+    border-bottom: 1rpx solid #eee;
+    display: flex;
+    font-size: 28rpx;
+}
+.addr-details .label{
+    margin:auto 0 auto 0;
+    width: 160rpx;
+    color: #000
 }
